Adjust test